--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<!-- Add another Color picker -->
 	<input class="color2" type="color" name="color2" value="#ff0000">
-	<h2>Current CSS Background</h2>
+	<h2>Current CSS Background changing</h2>
 	<!-- Wanna use h3 to display the color picker value in <h3> -->
 	<h3></h3>
 	<input id="button" class="random" type="button" value="random 2 colors">
