--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 		<input class="default" id="default" type="text" name="initial">
 		
 	</div> -->
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
